# q01

./: README.md
QuantumSecureComms/: Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
QuantumSecureComms/.github/workflows/: ci.yml
QuantumSecureComms/examples/: quickstart.py
QuantumSecureComms/qsecure/: __init__.py  cli.py
QuantumSecureComms/qsecure/comms/: __init__.py  chat.py  secure_channel.py
QuantumSecureComms/qsecure/hybrid/: __init__.py  hybrid.py
QuantumSecureComms/qsecure/pqc/: __init__.py  dilithium.py  kyber.py  sphincs.py
QuantumSecureComms/qsecure/qkd/: __init__.py  bb84.py
QuantumSecureComms/qsecure/qrng/: __init__.py  qrng.py
QuantumSecureComms/qsecure/utils/: logger.py
QuantumSecureComms/tests/: test_bb84.py  test_chat.py
